--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
   <title>{{.title}}</title>
 </head>
 <body>
-  <h1>Welcome to douyin API!</h1>
+  <h1>Welcome to simpledouyin! 欢迎来到极简抖音项目</h1>
   <ul>
     <li>
       <a href="/douyin/feed/">/douyin/feed/</a>
